= Changelog

== Version 1.2.0

[small]#Released at xx.xx.xxxx#

* https://github.com/svenkubiak/mangooio/issues/57[#57] Added OAuth to authentication (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/61[#61] Move Body to Request (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/58[#58] Added @metrics administrative URL (svenkubiak)
* Updated Documentation (svenkubiak)
* Version bumps (svenkubiak)
** undertow 1.2.12.Final -> 1.3.xx.Final

== Version 1.1.3

[small]#Released at 21.09.2015#

* https://github.com/svenkubiak/mangooio/issues/62[#62] Set default encoding (UTF-8) to form parsing (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/59[#59] Fixed a NPE when template exception was caught (svenkubiak)

== Version 1.1.2

[small]#Released at 17.09.2015#

* Fixed a NPE when a Request object and JSON was required in a controller method (svenkubiak)
* Refactored dev mode exception template (svenkubiak)
* Fixed bug that did not show exception in frontend in dev mode (svenkubiak)
* Fixed typo in ContentType enum (svenkubiak)

== Version 1.1.1

[small]#Released at 15.09.2015#

* Updated Documentation (svenkubiak)

== Version 1.1.0

[small]#Released at 14.09.2015#

* Refactored RequestHandler (svenkubiak)
* Refactored EhCache to Guava Cache (svenkubiak)
* Added ETag support for dynamic content (svenkubiak)
* Added a method for adding a complete content map to a template (svenkubiak)
* Added administrative URLs @health, @routes, @cache and @config (svenkubiak)
* Updated Documentation (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/52[#52] Refactored filters (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/40[#40] Added handling of multiple parameters in controller method (svenkubiak)
* https://github.com/svenkubiak/mangooio/issues/39[#39] Added methods for parameter validation (svenkubiak)