@@ -68,7 +68,9 @@ public enum Default {
     APPLICATION_ADMIN_CACHE("false"),
     APPLICATION_ADMIN_CONFIG("false"),
     APPLICATION_ADMIN_ROUTES("false"),
-    APPLICATION_ADMIN_METRICS("false");
+    APPLICATION_ADMIN_METRICS("false"),
+    AUTH_COOKIE_ENCRYPT("false"),
+    AUTH_COOKIE_VERSION("0");
 
     private final String value;
 
