@@ -4,6 +4,7 @@
 
 [small]#Released at xx.xx.xxxx#
 
+* https://github.com/svenkubiak/mangooio/issues/33[#33] Added Cookie versioning (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/57[#57] Added OAuth to authentication (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/61[#61] Move Body to Request (svenkubiak)
 * https://github.com/svenkubiak/mangooio/issues/58[#58] Added @metrics administrative URL (svenkubiak)
